--- a/notebooks/individual_research_pages.ipynb
+++ b/notebooks/individual_research_pages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Set environment variables\n",
     "token = os.environ['ACCESS_DATA']\n",
-    "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/\"\n",
+    "url_base_jsons = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/\"\n",
+    "url_base_research = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/research/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -50,27 +50,13 @@
    "source": [
     "\n",
     "# Fetch and decode JSON files\n",
-    "json_files = [\"general\"]\n",
+    "json_files = [\"general\", \"research\"]\n",
     "data = {}\n",
     "for json_file in json_files:\n",
-    "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
-    "    content = response.json()[\"content\"]\n",
-    "    decoded = base64.b64decode(content).decode()\n",
-    "    data[json_file] = json.loads(decoded)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Fetch and decode JSON files\n",
-    "json_files = [\"research\"]\n",
-    "data = {}\n",
-    "for json_file in json_files:\n",
-    "    response = requests.get(url_base + \"research/\"+ json_file + \".json\", headers=headers)\n",
+    "    response = requests.get(url_base_jsons + json_file + \".json\", headers=headers)\n",
+    "    if response.status_code == 404:\n",
+    "        # If file not found in jsons directory, look in the people directory\n",
+    "        response = requests.get(url_base_research + json_file + \".json\", headers=headers)\n",
     "    content = response.json()[\"content\"]\n",
     "    decoded = base64.b64decode(content).decode()\n",
     "    data[json_file] = json.loads(decoded)\n"
