--- a/notebooks/people.ipynb
+++ b/notebooks/people.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,31 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Set environment variables\n",
     "token = os.environ['ACCESS_DATA']\n",
-    "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/\"\n",
+    "url_base_jsons = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/\"\n",
+    "url_base_people = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/people/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
-    "}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Fetch and decode general JSON files\n",
-    "json_files = [\"general\"]\n",
+    "# Fetch and decode JSON files\n",
+    "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\"]\n",
     "data = {}\n",
     "for json_file in json_files:\n",
-    "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
+    "    response = requests.get(url_base_jsons + json_file + \".json\", headers=headers)\n",
+    "    if response.status_code == 404:\n",
+    "        # If file not found in jsons directory, look in the people directory\n",
+    "        response = requests.get(url_base_people + json_file + \".json\", headers=headers)\n",
     "    content = response.json()[\"content\"]\n",
     "    decoded = base64.b64decode(content).decode()\n",
     "    data[json_file] = json.loads(decoded)\n"
@@ -61,24 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Fetch and decode People JSON files\n",
-    "json_files = [ \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\"]\n",
-    "data = {}\n",
-    "for json_file in json_files:\n",
-    "    response = requests.get(url_base + \"people/\" + json_file + \".json\", headers=headers)\n",
-    "    content = response.json()[\"content\"]\n",
-    "    decoded = base64.b64decode(content).decode()\n",
-    "    data[json_file] = json.loads(decoded)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,15 +97,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
   "orig_nbformat": 4,
